[FIX] account_accountant: missing border top
Before this pr, the border top on the left side of the bank reco widget was
missing on the cards. By adding it to a custom class, the issue is resolved.

closes odoo/enterprise#49378

Task-id: 3561675
X-original-commit: 7dcdc46311c1d57b57fd978fbf58d70bf61bda26

--- a/account_accountant/static/src/components/bank_reconciliation/kanban.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/kanban.scss
@@ -77,6 +77,7 @@
 
             .o_bank_rec_st_line_kanban_card{
                 margin: 0px !important;
+                border-top: 1px solid $border-color;
             }
         }
     }
